# hex-turbo

./: Cargo.toml  LICENCE-APACHE  LICENSE-MIT  README.md
.github/workflows/: miri.yml  release.yml  tests.yml  verification.yml
benches/: encoding_bench.rs
benches/scripts/: clean_bench.py
docs/: README.md  design.md  ecosystem_comparison.md  faq.md  verification.md
docs/benchmarks/: README.md  amd_epyc_genoa.md  intel_i7_avx2.md  intel_i7_scalar.md  intel_xeon_8488c.md
src/: lib.rs  scalar.rs  serde.rs
src/simd/: avx2.rs  avx512.rs  mod.rs  sse4.rs
tests/: test-allocation.rs  test-classic.rs  test_coverage.rs
